# Discord

./: .env.example  .gitignore  README.md  environment.d.ts  index.ts  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start.mjs  tsconfig.json
Commands/: d3mantle.py  define.py  definir.py  gartic.py  wod.py  wos.py
Config/: albie_weekes_jokes.json  custom_levels.json  emotes.json  levels.json
Demantle/: game.py
Events/: on_message.py
Locale/: en_US.json  pt_BR.json
Utils/: wod_utils.py
src/Commands/: bomb.ts  d3mantle.ts  define.ts  duel.ts  eval.txt  music_queue.disabled.txt  music_resume.disabled.txt  music_sr.disabled.txt
src/Config/: WOSboard.json  cheaters.json  commands.json  desafiantes.json  gos.json  status.json  terminal.js  terminal.py
src/Core/: Musical.ts  client.ts  command.ts  functions.ts  runtime.ts
src/Demantle/: Demantle.ts  index.html  script.js  style.css
src/Emotes/: 5head.ts  ahoy.ts  america.ts  angel.ts  china.ts  christmas.ts  clap.ts  copium.ts  demonio.ts  demônio.ts  didsomeonesaycock.ts  diesofcringe.ts  dominio.ts  donowall.ts  drpinguins.ts  ez.ts  feelswowman.ts  florestapinguins.ts  gg.ts  gigachad.ts  gladge.ts  hypers.ts  kappa420.ts  kekies.ts  kekw.ts  letsgo.ts  livesfrombased.ts  madge.ts  modcheck.ts  molho_madeira.ts  monkaban.ts  monkahmm.ts  monkas.ts  monkasteer.ts  monkatos.ts  monkaw.ts  murica.ts  myaa.ts  mérica.ts  nerdge.ts  (+45 more)
src/Events/: interactionCreate.ts  messageCreate.ts  messageReactionAdd.ts  messageReactionRemove.ts
tests/: GarticRegex.test.ts
(+117 files in other folders)
